k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-apps
spec:
  selector:
    app: python-apps
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
