k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-apps
spec:
  rules:
  - host: "python-apps.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-apps
            port:
              number: 8080
